fixed vision section odd alignment

--- a/index.css
+++ b/index.css
@@ -481,6 +481,7 @@ a {
     aspect-ratio: 4 / 3;
     border-radius: 5px;
     box-shadow: 0 0 1px black;
+    height: 350px;
 }
 
 
@@ -497,19 +498,17 @@ a {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    align-items: stretch;
 }
 
 .vision-figure {
     height: auto;
-    max-height: 400px;
     display: flex;
     min-width: 250px;
     flex: 4;
 }
 
 .vision-image {
-    width: 100%;
-    height: 100%;
     box-shadow: 0 0 1px black;
     border-radius: 10px 0 0 10px;
 }
@@ -522,6 +521,7 @@ a {
     flex-direction: column;
     gap: var(--SPACE-4);
     border-radius: 0 10px 10px 0;
+    justify-content: flex-start;
 }
 
 .vision-description {
@@ -772,9 +772,31 @@ a {
 
 
 /* MEDIA QUERIES */
-
 /* TABLET */
-@media (max-width: 426px) {
+/* @media(max-width: 768px) {
+    .gallery-grid {
+        display: flex;
+        overflow-x: auto;
+    }
+
+    .gallery-image {
+        min-width: 250px;
+    }
+
+    .gallery-grid::-webkit-scrollbar {
+        display: none;
+    }
+} */
+
+
+
+
+
+
+
+
+/* Mobile */
+@media (max-width: 500px) {
     :root {
         --SECTION-SIDE-PADDING: var(--SPACE-3);
     }
@@ -823,8 +845,15 @@ a {
 
 
     /* VISION */
+    .vision-container {
+        flex-direction: column;
+    }
     .vision-image {
         border-radius: 10px 10px 0 0;
+    }
+
+    .vision-figure {
+        max-height: 600px;
     }
 
     .vision-description-container {
